# game_of_life

./: .gitignore  CMakeLists.txt  CMakeLists_Vnul.txt  LICENSE  Makefile  Makefile.Debug  Makefile.Release  README.md  algos.md  cell.cpp  cell.h  conventions.md  game_of_life.cpp  game_of_life.h  idees.md  main.cpp  mainwindow.cpp  mainwindow.h  moc_mainwindow.cpp  moc_predefs.h  motifs.cpp  motifs.h  motis.cpp  motis.h  pour_tudor.pro  time_test.cpp
.github/: macos.yml
.github/workflows/: cmake.yml  linux.yml  macos.yml
data/local/sims/: .gitignore
data/presaved/motifs/: gland.csv  lievres.csv  ligne-oblique.csv  pentominoR.csv  planeur.csv
data/presaved/sims/: sim-lievres.csv
src/: CMakeLists.txt  icon.icns  main.cpp
src/cli/: CMakeLists.txt  affichage.cpp  affichage.h
src/qt/: CMakeLists.txt  Cell.cpp  Cell.hpp  CellItem.cpp  CellItem.hpp  GraphicsView.cpp  GraphicsView.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow_.cpp  MainWindow_.hpp  MovableGroup.cpp  MovableGroup.hpp  NormalViewport.cpp  NormalViewport.hpp  OptimizedViewport.cpp  OptimizedViewport.hpp  Viewport.cpp  Viewport.hpp  cell_.cpp  images.qrc  mainwindow.cpp  mainwindow.h  mainwindow_.cpp  mainwindow_.h  resources.qrc  style_sheet.qss
src/simulation/: CMakeLists.txt  Cell.cpp  Cell.hpp  EquivalenceTable.cpp  EquivalenceTable.hpp  GameOfLife.cpp  GameOfLife.hpp  Motif.cpp  Motif.hpp  equivalence_table.cpp  equivalence_table.hpp  game_of_life.cpp  game_of_life.h  motifs.cpp  motifs.h  termcolor.hpp
test/: CMakeLists.txt  golUnitTest.cpp  motifUnitTest.cpp  test_cli.cpp  test_color.cpp  test_connexite.cpp  test_divers.cpp  test_equivalence_table.cpp  test_existing_sims.cpp  test_gameoflifeview.cpp  test_movablegroup.cpp  test_movablegroup.csv  test_rapidcsv.cpp  test_resize.cpp  test_rotation.cpp  test_save_motif.cpp  test_save_sim.cpp  test_segment.cpp  time_test.cpp  unittest.cpp
